[package]
name = "bsondump"
version = "0.1.0"
authors = ["glowe <graham@spinlag.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.1.0"
clap = "2.33.3"
serde_json = "1.0.57"

[profile.release]
opt-level = 3
