[package]
name = "bsondump"
version = "0.1.0"
authors = ["glowe <graham@spinlag.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.3.0"
clap = "3.2.12"
serde_json = "1.0.82"

[profile.release]
opt-level = 3
