[package]
name = "bsondump"
version = "0.1.0"
authors = ["glowe <graham@spinlag.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.3.0"
clap = "3.2.12"
chrono = "0.4.19"
serde = "1.0.140"
serde_json = "1.0.82"

[dev-dependencies]
test_bin = "0.4.0"

[profile.release]
opt-level = 3
